--- a/portfolio-primus/src/index.css
+++ b/portfolio-primus/src/index.css
@@ -8,7 +8,8 @@ html {
 
 body {
   margin: 0;
-  font-family: avenir-lt-w01_35-light1475496, 'Avenir Light', 'Avenir', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 15px;
