send mail worked

--- a/portfolio-primus/src/index.css
+++ b/portfolio-primus/src/index.css
@@ -23,8 +23,9 @@ body {
 }
 
 input, textarea {
-  background-color: white !important;
-  color: rgb(160, 160, 159) !important;
+  background-color: rgb(240, 240, 240) !important;
+  color: rgb(0, 0, 0) !important;
+  font-weight: 400 !important;
 }
 
 img.logo-image {
